grammar.js
    source_file: ($) =>
      seq(
        optional($._newline),
        repeat(seq($._top_level_item, optional($._newline))),
      ),

    _top_level_item: ($) => choice($._top_level_decl, $._statement),

    annotated_declaration: ($) =>
      seq(
        $._annotation,
        repeat(seq(optional($._newline), $._annotation)),
        optional($._newline),
        choice(
          $.struct_declaration,
          $.enum_declaration,
          $.builtin_declaration,
          $.protocol_declaration,
          $.function_declaration,
          $.priv_function,
          $.extern_function_declaration,
          $.const_declaration,
          $.type_alias_declaration,
        ),
      ),

    // ====================================================================
    // 2. Annotations
    // ====================================================================

    _annotation: ($) => $.annotation,

    annotation: ($) =>
      seq(
        "@",
        field("name", $.identifier),
        optional(field("value", $._annotation_value)),
      ),

    _annotation_value: ($) => choice($.string, $.multiline_string, "false"),

    // ====================================================================
    // 3. Struct
    // ====================================================================

    // The name accepts a dotted path (`struct Process.CrashInfo`) for
    // types nested under an owning type. Owner segments get their own
    // field so `name:` queries keep capturing the declared leaf.
    struct_declaration: ($) =>
      seq(
        optional("priv"),
        "struct",
        repeat(seq(field("owner", $.type_identifier), ".")),
        field("name", $.type_identifier),
        optional(field("type_parameters", $.type_parameters)),
        optional(seq(":", field("conformances", $.conformance_list))),
        optional($._newline),
        repeat(seq($._struct_member, optional($._newline))),
        "end",
      ),

    // Header conformance list: `struct App: Process<C, M, R>, Debug`.
    // The listed protocols are satisfied by the type body's functions.
    conformance_list: ($) =>
      seq(
        optional($._newline),
        $._type_expression,
        repeat(seq(",", optional($._newline), $._type_expression)),
      ),

    // Nested type, protocol, and constant declarations are sugar for
    // the dotted-path top-level form.
    _struct_member: ($) =>
      choice(
        $.struct_field,
        $.function_declaration,
        $.priv_function,
        $.test_declaration,
        $.const_declaration,
        $.struct_declaration,
        $.enum_declaration,
        $.protocol_declaration,
        $.annotated_declaration,
      ),

    struct_field: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", $._type_expression),
        optional(seq("=", field("default", $._expression))),
      ),

    // ====================================================================
    // 4. Enum
    // ====================================================================

    // Same dotted-path naming as `struct_declaration` (`enum File.Mode`).
    enum_declaration: ($) =>
      seq(
        optional("priv"),
        "enum",
        repeat(seq(field("owner", $.type_identifier), ".")),
        field("name", $.type_identifier),
        optional(field("type_parameters", $.type_parameters)),
        optional(seq(":", field("conformances", $.conformance_list))),
        optional($._newline),
        repeat(seq($._enum_member, optional($._newline))),
        "end",
      ),

    _enum_member: ($) =>
      choice(
        $.enum_variant,
        $.function_declaration,
        $.priv_function,
        $.test_declaration,
        $.const_declaration,
        $.struct_declaration,
        $.enum_declaration,
        $.protocol_declaration,
        $.annotated_declaration,
      ),

    enum_variant: ($) =>
      seq(
        field("name", $.type_identifier),
        optional(
          choice(
            seq(
              "(",
              commaSep(optional($._newline), $._type_expression),
              optional($._newline),
              ")",
            ),
            seq(
              "{",
              optional($._newline),
              commaSep(optional($._newline), $.struct_field),
              optional(","),
              optional($._newline),
              "}",
            ),
          ),
        ),
      ),

    // ====================================================================
    // 5. Builtin
    // ====================================================================

    // Compiler-owned types (`builtin String ... end`). Always public;
    // the body admits functions, tests, and constants.
    builtin_declaration: ($) =>
      seq(
        "builtin",
        repeat(seq(field("owner", $.type_identifier), ".")),
        field("name", $.type_identifier),
        optional(field("type_parameters", $.type_parameters)),
        optional($._newline),
        repeat(seq($._builtin_member, optional($._newline))),
        "end",
      ),

    _builtin_member: ($) =>
      choice(
        $.function_declaration,
        $.priv_function,
        $.test_declaration,
        $.const_declaration,
        $.annotated_declaration,
      ),

    // ====================================================================
    // 6. Protocol
    // ====================================================================

    // Same dotted-path naming as `struct_declaration` (`protocol
    // Date.Format`). A protocol can also sit inside the owner's body.
    protocol_declaration: ($) =>
      seq(
        optional("priv"),
        "protocol",
        repeat(seq(field("owner", $.type_identifier), ".")),
        field("name", $.type_identifier),
        optional(field("type_parameters", $.type_parameters)),
        optional($._newline),
        repeat(
          seq(
            choice($.protocol_method, $.annotated_protocol_method),
            optional($._newline),
          ),
        ),
        "end",
      ),

    protocol_method: ($) =>
      choice(
        prec.dynamic(10, seq(...fnHeader($), ...blockBody($), "end")),
        prec.dynamic(-10, seq(...fnHeader($))),
      ),

    // ====================================================================
    // 7. Impl and Extend
    // ====================================================================

    // `impl Trait for Target` — protocol conformance only. Bare
    // `impl Target` is not supported; users write `extend Target`
    // for inherent methods (see `extend_block` below).
    impl_block: ($) =>
      seq(
        "impl",
        field("trait", $._type_expression),
        "for",
        field("target", $._type_expression),
        optional($._newline),
        repeat(seq($._impl_member, optional($._newline))),
        "end",
      ),

    extend_block: ($) =>
      seq(
        "extend",
        field("target", $._type_expression),
        optional($._newline),
        repeat(seq($._impl_member, optional($._newline))),
        "end",
      ),

    _impl_member: ($) =>
      choice(
        $.function_declaration,
        $.priv_function,
        $.test_declaration,
        $.type_alias_declaration,
        $.annotated_declaration,
      ),

    // `test "description" ... end`. The body has no parameters and
    // fails through `assert` or `fail`. Allowed at the top level and
    // inside any type body, where the enclosing type is the suite.
    function_declaration: ($) =>
      prec.dynamic(10, seq(...fnHeader($), ...blockBody($), "end")),

    priv_function: ($) =>
      prec.dynamic(10, seq("priv", ...fnHeader($), ...blockBody($), "end")),

    // Bodyless declaration used under `@extern` / `@intrinsic`. The
    // negative dynamic precedence makes the full-body forms above win
    // whenever an `end` keyword follows. The optional `priv` covers
    // stdlib FFI declarations like `priv fn evp_sha1 -> CPtr<UInt8>`.
    extern_function_declaration: ($) =>
      prec.dynamic(-10, seq(optional("priv"), ...fnHeader($))),

    return_type: ($) => seq("->", $._type_expression),

    // `! E` error channel in a signature. Bare `! E` means a unit success.
    error_type: ($) => seq("!", $._type_expression),

    // Dynamic precedence: when a parenthesised header on a function
    // declaration could either bind as parameters or as the start of a
    // body expression (parenthesised_expression / short_closure /
    // unit_literal), GLR explores all branches and we prefer this one.
    parameters: ($) =>
      prec.dynamic(
        20,
        seq(
          "(",
          optional($._newline),
          optional(
            seq(
              commaSep1(optional($._newline), $._param_or_self),
              optional(","),
            ),
          ),
          optional($._newline),
          ")",
        ),
      ),

    _param_or_self: ($) => choice($.parameter, $.self_parameter),

    parameter: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", $._type_expression),
        optional(seq("=", field("default", $._expression))),
      ),

    self_parameter: ($) => prec(2, "self"),

    // ====================================================================
    // 9. Type expressions
    // ====================================================================

    _type_expression: ($) => choice($.union_type, $._primary_type),

    // Higher precedence than `_type_expression` so we always extend
    // a union greedily when `|` follows a primary type.
    union_type: ($) =>
      prec.right(1, seq($._primary_type, repeat1(seq("|", $._primary_type)))),

    _primary_type: ($) =>
      choice(
        $.function_type,
        $.generic_type,
        $.named_type,
        $.self_type,
        $.tuple_type,
        $.unit_type,
      ),

    generic_type: ($) =>
      prec(
        PREC.type_args,
        seq(
          field("name", $.named_type),
          field("type_arguments", $.type_arguments),
        ),
      ),

    type_arguments: ($) =>
      seq(
        "<",
        optional($._newline),
        commaSep1(
          optional($._newline),
          choice(
            $._type_expression,
            alias($._bounded_type_argument, $.type_parameter),
          ),
        ),
        optional($._newline),
        ">",
      ),

    // `impl Equality for List<T: Equality>` introduces `T` with a
    // bound in the target's argument list. Only an impl target admits
    // this, but the grammar accepts it in any argument list and
    // leaves the check to the compiler.
    _bounded_type_argument: ($) =>
      seq(field("name", $.type_identifier), ":", field("bounds", $._bounds)),

    named_type: ($) =>
      prec.left(seq($.type_identifier, repeat(seq(".", $.type_identifier)))),

    self_type: ($) => "Self",

    // Anonymous tuple type, arity 2+. `()` is unit and `(T)` is not
    // a type, so at least one comma is required.
    type_parameters: ($) =>
      seq("<", commaSep1(optional($._newline), $.type_parameter), ">"),

    type_parameter: ($) =>
      seq(
        field("name", $.type_identifier),
        optional(seq(":", field("bounds", $._bounds))),
      ),

    // A bound is a protocol, which can be nested (`T: Date.Format`)
    // or generic (`T: Process<M>`).
    _bounds: ($) => sepBy1("&", $._primary_type),

    // ====================================================================
    // 10. Top-level / impl-level declarations: const, alias, type
    // ====================================================================

    // The name takes an owner path (`const Duration.ZERO = ...`) for a
    // constant nested under a type, the same as `struct_declaration`.
    const_declaration: ($) =>
      seq(
        optional("priv"),
        "const",
        repeat(seq(field("owner", $.type_identifier), ".")),
        field("name", choice($.identifier, $.type_identifier)),
        optional(seq(":", field("type", $._type_expression))),
        "=",
        field("value", $._expression),
      ),

    type_alias_declaration: ($) =>
      seq(
        optional("priv"),
        "type",
        field("name", $.type_identifier),
        "=",
        field("type", $._type_expression),
      ),

    // The path names a type, a package-level function, or a constant,
    // so the local name follows the case of what it binds.
    alias_declaration: ($) =>
      seq(
        "alias",
        field("path", $.alias_path),
        optional(
          seq(
            "as",
            field("local_name", choice($.identifier, $.type_identifier)),
          ),
        ),
      ),

    alias_path: ($) =>
      seq(
        choice($.identifier, $.type_identifier),
        repeat(seq(".", choice($.identifier, $.type_identifier))),
      ),

    // ====================================================================
    // 11. Block / statements
    // ====================================================================

    // A block is one or more statements separated by newlines, with
    // an optional trailing newline. The trailing newline is what
    // gives the parser a reduce path when an `end` (or similar
    // closer) follows; without it tree-sitter ends up emitting `end`
    // as an identifier and the block runs off the rails. Statement
    // separators are declared as a conflict (`[$.block]`) so GLR can
    // simultaneously explore "extend the block" and "stop here" —
    // this keeps multi-statement bodies working inside `match` arms.
    block: ($) =>
      seq(
        $._statement,
        repeat(seq($._newline, $._statement)),
        optional($._newline),
      ),

    _statement: ($) =>
      choice(
        $.return_statement,
        $.break_statement,
        $.assert_statement,
        $.compound_assignment,
        $.assignment,
        $.expression_statement,
      ),

    expression_statement: ($) => $._expression,

    assignment: ($) =>
      choice(
        // Typed binding: `name: Type = expr`
        seq(
          field("target", $.identifier),
          ":",
          field("type", $._type_expression),
          "=",
          optional($._newline),
          field("value", $._expression),
        ),
        // Plain assignment: `lvalue = expr`. A wildcard target
        // (`_ = expr`) discards the value.
        prec(
          1,
          seq(
            field("target", choice($._lvalue, $.wildcard)),
            "=",
            optional($._newline),
            field("value", $._expression),
          ),
        ),
        // Tuple destructuring: `(a, b) = expr`. Elements are
        // irrefutable per the reference parser: bindings, wildcards,
        // and nested tuples only.
        seq(
          field("target", $.tuple_binding),
          "=",
          optional($._newline),
          field("value", $._expression),
        ),
      ),

    _lvalue: ($) => choice($.identifier, $.field_access, "self"),

    _expression: ($) =>
      choice(
        $.rescue_expression,
        $.short_closure,
        $.ternary_expression,
        $.binary_expression,
        $.unary_expression,
        $.try_expression,
        $._postfix_expr,
      ),

    // `expr rescue e -> handler`. Binds loosest and chains left. The
    // scanner suppresses the newline before a line-leading `rescue`.
    rescue_expression: ($) =>
      prec.left(
        PREC.rescue,
        seq(
          field("subject", $._expression),
          "rescue",
          field("binder", choice($.identifier, $.wildcard)),
          "->",
          optional($._newline),
          field("handler", $._expression),
        ),
      ),

    // `try expr` is a prefix operator at unary precedence, like `-`.
    try_expression: ($) =>
      prec(PREC.unary, seq("try", field("expression", $._expression))),

    // Short closure: `params -> body`. Body is a full expression.
    _postfix_expr: ($) =>
      choice($.call, $.method_call, $.field_access, $._primary_expr),
